# nand2tetris

./: README.md  pyproject.toml
01/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
04/mult/: Fill.asm  Mult.asm  tmp.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/src/: assembler.py  code.py  parser.py
06/src06/: assembler.py  code.py  parser.py  symboltable.py
06/tests/: test_assembler.py  test_parser.py  test_symboltable.py
07/src07/: codewriter.py  parser.py  vmtranslator.py
07/tests/: test_parser.py
07/vm/BasicTest/: BasicTest.asm
07/vm/PointerTest/: PointerTest.asm
07/vm/StackTest/: StackTest.asm
07/vm/StaticTest/: StaticTest.asm
08/src08/: arithmetic.py  codewriter.py  parser.py  vmtranslator.py
09/src09/: jacktokenizer.py
10/src10/: compilation_engine.py  compilationengine.py  jackanalyzer.py  jacktokenizer.py  token.py  tokens.py
10/tests/: test_jacktokenizer.py
11/: diffxml.sh
11/jack/Average/: MainTest.xml
11/jack/ComplexArrays/: MainTest.vm  MainTest.xml
11/jack/ConvertToBin/: MainTest.xml
11/jack/Pong/: BallTest.xml  BatTest.xml  MainTest.xml  PongGameTest.vm  PongGameTest.xml
11/jack/Seven/: MainTest.vm  MainTest.xml
11/jack/Square/: MainTest.xml  SquareGameTest.vm  (+2 more)
11/src11/: compilation_engine.py  jackanalyzer.py  jacktokenizer.py  symboltable.py  vmwriter.py
11/tests/: test_symboltable.py
(+6 files in other folders)
